--- a/people-2/index.html
+++ b/people-2/index.html
@@ -312,8 +312,8 @@
             <ul>
                 <li><a href="../index.html">Research</a></li>
                 <li><a href="../index.html">About</a></li>
-                <li><a href="people-2/index.html">People</a></li>
-                <li><a href="publications/index.html">Publications</a></li>
+                <li><a href="../people-2/index.html">People</a></li>
+                <li><a href="../publications/index.html">Publications</a></li>
                 <li><a href="https://wiki.rice.edu/confluence/display/BIODESIGN/Home">Lab wiki</a></li>
             </ul>
         </div>
