--- a/people-2/index.html
+++ b/people-2/index.html
@@ -321,17 +321,19 @@
 
     <div class="container">
         <!-- Header Section -->
-        <div class="header-section">
+        <!-- <div class="header-section">
             <h1>Our Team</h1>
             <p style="font-size: 18px; color: var(--primary-blue); font-weight: 500; text-align: center;">people people</p>
-        </div>
+        </div> -->
 
         <!-- Principal Investigator -->
         <div class="team-section">
             <h2 id="team">Principal Investigator</h2>
             <div class="team-member">
                 <strong>Matthew R. Bennett, PhD</strong>
-                <a title="Matthew R. Bennett" href="https://profiles.rice.edu/faculty/matthew-bennett">Matthew R. Bennett, PhD</a><img class="alignright size-thumbnail wp-image-80" title="" src="matt-bennett/Matt.jpg" alt="" width="150" height="150" />
+                <strong><a title="Matthew R. Bennett" href="https://profiles.rice.edu/faculty/matthew-bennett">Matthew R. Bennett, PhD</a></strong>
+                <img class="size-thumbnail wp-image-80" title="" src="matt-bennett/Matt.jpg" alt="" width="150" height="150" />
+                <!-- <img class="alignright size-thumbnail wp-image-80" title="" src="matt-bennett/Matt.jpg" alt="" width="150" height="150" /> -->
                 <p>Email: matthew.bennett [at] rice.edu</p>
                 <p>Phone: +1 713.348.4161</p>
                 <p>Office: Keck 306</p>
