--- a/index.html
+++ b/index.html
@@ -386,16 +386,22 @@
         <h2>Research Areas</h2>
         <div class="grid-section">
             <div class="card">
-                <h3>key1</h3>
+                <h3>Multicellular synthetic biology</h3>
                 <p>sth</p>
             </div>
             <div class="card">
-                <h3>key2</h3>
-                <p>sth</p>
+                <h3>Mimicking eukaryotic developmental processes in bacteria</h3>
+                <p>We are exploring ways in which to engineer bacterial systems to mimic natural cellular processes found in multicellular organisms. We have engineered a system for synthetic differentiation in E. coli and are exploring the dynamics and pattern formation of differentiating populations.</p>
             </div>
+        </div>
+        <div class="grid-section">
             <div class="card">
                 <h3>key3</h3>
                 <p>sth</p>
+            </div>
+            <div class="card">
+                <h3>Understanding the mathematics of cells</h3>
+                <p>We are developing models that correctly predict the function and dynamics of synthetic gene circuits and populations. We are challenging existing paradigms by creating and analyzing gene expression models that incorporate stochasticity and delays as well as population models that incorporate emergent chemical gradients and mechanical interactions.</p>
             </div>
         </div>
 
