--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         }
 
         body {
-      		margin: 0;
+      		/* margin: 0;
       		padding: 0;
       		width: 100%;
       		height: 100%;
-      		overflow-x: hidden;
+      		overflow-x: hidden; */
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             color: var(--text-dark);
             background-color: var(--white);
@@ -91,7 +91,7 @@
             height: 50px;
             border-radius: 0%;
             background-color: var(--accent-blue);
-            display: left;
+            display: flex;
             align-items: center;
             justify-content: center;
             overflow: hidden;
@@ -105,8 +105,8 @@
 
         .logo::before {
             content: ;
-            width: 8px;
-            height: 8px;
+            width: 0px;
+            height: 0px;
             background-color: var(--accent-blue);
             border-radius: 50%;
             display: inline-block;
