--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
             </a>
             <ul>
                 <li><a href="#research">Research</a></li>
-                <li><a href="#about">About</a></li>
+                <!-- <li><a href="#about">About</a></li> -->
                 <li><a href="people-2/index.html">People</a></li>
                 <li><a href="publications/index.html">Publications</a></li>
                 <li><a href="https://wiki.rice.edu/confluence/display/BIODESIGN/Home">Lab wiki</a></li>
