--- a/people-2/index.html
+++ b/people-2/index.html
@@ -322,7 +322,7 @@
             </a>
             <ul>
                 <li><a href="../index.html">Research</a></li>
-                <li><a href="../index.html">About</a></li>
+                <!-- <li><a href="../index.html">About</a></li> -->
                 <li><a href="../people-2/index.html">People</a></li>
                 <li><a href="../publications/index.html">Publications</a></li>
                 <li><a href="https://wiki.rice.edu/confluence/display/BIODESIGN/Home">Lab wiki</a></li>
@@ -523,8 +523,8 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; The Biodesign Lab. All rights reserved.</p>
-        <p style="margin-top: 10px; font-size: 14px;">sth inspiring</p>
+        <p>&copy; The Biodesign Lab. Rice University.</p>
+        <!-- <p style="margin-top: 10px; font-size: 14px;">sth inspiring</p> -->
     </footer>
 </body>
 </html>
