--- a/people-2/index.html
+++ b/people-2/index.html
@@ -409,7 +409,7 @@
                 <p>Email: cr85 [at] rice.edu</p>
             </div>
             <div class="team-member">
-                <strong>Kadena Cope</strong>
+                <strong>Kadena Weaver</strong>
                 <!-- <img class="alignleft size-full wp-image-270" title="" src="charis.png" alt="" width="97" height="97" /> -->
                 <p>Email: kc210 [at] rice.edu</p>
             </div>
