--- a/people-2/index.html
+++ b/people-2/index.html
@@ -410,6 +410,7 @@
             </div>
             <div class="team-member">
                 <strong>Kadena Weaver</strong>
+                <img class="alignleft size-full wp-image-270" title="" src="Kadena.jpg" alt="" width="97" height="97" />
                 <!-- <img class="alignleft size-full wp-image-270" title="" src="charis.png" alt="" width="97" height="97" /> -->
                 <p>Email: kc210 [at] rice.edu</p>
             </div>
