--- a/index.html
+++ b/index.html
@@ -36,15 +36,16 @@
         }
       
       video-containter{
-      		width: 200%;
+      		width: 250%;
   			/* Optional: Set a specific height if you want the container to fill the screen vertically */
   			/* height: 100vh; */
-  			position: relative;
+		  	align-items: center;
+  			position: flex;
   			overflow: hidden;
 		}
       
       #video-background {
-  			width: 200%; /* Makes the video span the full width of its container */
+  			width: 250%; /* Makes the video span the full width of its container */
  			 height: auto; /* Maintains the video's aspect ratio */
   			display: block; /* Removes any default inline-block spacing */
 		}
