--- a/people-2/index.html
+++ b/people-2/index.html
@@ -334,7 +334,8 @@
         <!-- Header Section -->
 
         <div class="header-section" style="text-align: center; margin-bottom: 40px;">
-            <div style="width: 100%; height: 100%; background: linear-gradient(135deg, var(--light-blue) 0%, rgba(0, 153, 255, 0.1) 100%); border-radius: 0px; display: flex; align-items: center; justify-content: center; margin-bottom: 30px; border: 2px dashed var(--primary-blue);">
+            <div>
+                <!-- style="width: 100%; height: 100%; background: linear-gradient(135deg, var(--light-blue) 0%, rgba(0, 153, 255, 0.1) 100%); border-radius: 0px; display: flex; align-items: center; justify-content: center; margin-bottom: 30px; border: 2px dashed var(--primary-blue);"> -->
                 <img id="labGroupImage" src="../BennettLab_Merged2.JPG" alt="" title="lab_photo_2018" style="width: 100%; height: 100%; object-fit: cover; border-radius: 10px;">
             </div>
         
