--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         }
       
       video-containter{
-      		width: 250%;
+      		width: 100%;
+		  	/* height: 250%; */
   			/* Optional: Set a specific height if you want the container to fill the screen vertically */
   			/* height: 100vh; */
 		  	align-items: center;
@@ -47,15 +48,20 @@
 
 		video-container video {
 		    /* Ensure the video fills the container while maintaining its aspect ratio */
-		    width: 250%; 
-		    height: 250%;
+			transform: scale(3);
+			position: absolute;
+		    top: 50%;
+		    left: 50%;
+		    transform: translate(-50%, -50%) scale(1.5); /* Centers the element after scaling */
+		    width: 100%; 
+		    height: 100%;
 		    object-fit: cover; 
 		    /* Position the center of the video at the center of the container (this is the default behavior) */
 		    object-position: center center; 
 		}
       
       #video-background {
-  			width: 250%; /* Makes the video span the full width of its container */
+  			width: 100%; /* Makes the video span the full width of its container */
  			 height: auto; /* Maintains the video's aspect ratio */
   			display: block; /* Removes any default inline-block spacing */
 		}
