--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         }
       
       video-containter{
-      		width: 100%;
+      		width: 1200px;
+		  	height: 500px;
 		  	/* height: 250%; */
   			/* Optional: Set a specific height if you want the container to fill the screen vertically */
   			/* height: 100vh; */
