--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 
   
       <div class="video-container">
-                  <video autoplay muted loop id="video-background">
+                  <video autoplay muted loop>
                     <source src="webpage_video.m4v" type="video/mp4">
                     <!-- Optional: Add fallback text or images for older browsers -->
                     Your browser does not support the video tag.
