--- a/people-2/index.html
+++ b/people-2/index.html
@@ -367,12 +367,12 @@
                 <p>Professor, University of Houston</p>
                 <p>Email: josic [at] math.uh.edu</p>
             </div>
-            <div class="team-member">
+            <!-- <div class="team-member">
                 
                 <a title="William Ott" href="http://www.math.uh.edu/~ott/"><strong>William Ott, PhD</strong></a><img class="alignright size-thumbnail wp-image-80" title="" src="will-ott/will.jpg" alt="" width="150" height="150" />
                 <p>University of Houston</p>
                 <p>Email: ott [at] math.uh.edu</p>
-            </div>
+            </div> -->
         </div>
 
         <!-- Postdoc -->
@@ -401,7 +401,7 @@
             
             <div class="team-member">
                 <strong>Charis Giannitsis</strong>
-                <img class="alignleft size-full wp-image-270" title="" src="charis.png" alt="" width="97" height="97" />
+                <img class="alignleft size-full wp-image-270" title="" src="charis.jpg" alt="" width="97" height="97" />
                 <p>Email: cg56 [at] rice.edu</p>
             </div>
             <div class="team-member">
