--- a/index.html
+++ b/index.html
@@ -418,8 +418,8 @@
         <!-- Research Overview -->
         <div class="research-overview" id="research">
             <h2>Our Research Focus</h2>
-            <p>Our research spans the boundary between theoretical and experimental synthetic biology. We use an interdisciplinary approach to 1) uncover the underlying design principles governing gene networks and microbial consortia, 2) develop new mathematical tools to better describe gene networks, and 3) engineer novel synthetic gene circuits for environmental and medical applications.</p>
-            <!-- <p>Our research spans the boundary between theoretical and experimental synthetic biology. We use an interdisciplinary approach to:</p>
+            <p>Our research is aimed at making the transition from unicellular to multicellular synthetic biology. To do this, we create synthetic biological systems capable of mimicking the emergent behaviors of complex multicellular organisms by integrating molecules, systems, and populations. Emergent behaviors in  multicellular systems arise from the interactions of multiple cell types within the population. Each level of organization is important for emergent behaviors to arise. Molecules encode and regulate the genes needed to create the population. Gene networks regulate molecular interactions to bring about phenotype. Molecules transmit information within the population to give rise to emergent behavior. Because of this, population-level synthetic biology is not possible unless each level of organization, from molecules to systems to populations, is engineered to integrate into the whole.
+			</p><!-- <p>Our research spans the boundary between theoretical and experimental synthetic biology. We use an interdisciplinary approach to:</p>
             <ul>
                 <li><strong>Uncover design principles</strong> - Governing gene networks and microbial consortia</li>
                 <li><strong>Develop mathematical tools</strong> - To better describe gene networks and their behavior</li>
