--- a/people-2/index.html
+++ b/people-2/index.html
@@ -378,7 +378,7 @@
         <div class="team-section">
             <h2>Collaborators</h2>
             <div class="team-member">               
-              <img class="alignright size-thumbnail wp-image-80" title="" src="kreso-josic/kreso.jpg" alt="" width="150" height="150" />
+              <img class="alignright size-thumbnail wp-image-80" title="" src="kreso.jpg" alt="" width="150" height="150" />
               <div class = "team-member-info">
                 <a title="Krešimir Josić" href="http://www.math.uh.edu/~josic/"><strong>Krešimir Josić, PhD</strong></a>
                 <p>Professor, University of Houston</p>
