--- a/people-2/index.html
+++ b/people-2/index.html
@@ -378,7 +378,7 @@
         <div class="team-section">
             <h2>Collaborators</h2>
             <div class="team-member">               
-              <img class="alignright size-thumbnail wp-image-80" title="" src="kreso.jpg" alt="" width="150" height="150" />
+              <img class="alignright size-thumbnail wp-image-80" title="" src="kreso.jpg" alt="" width="150" height="150" object-fit = "cover">
               <div class = "team-member-info">
                 <a title="Krešimir Josić" href="http://www.math.uh.edu/~josic/"><strong>Krešimir Josić, PhD</strong></a>
                 <p>Professor, University of Houston</p>
@@ -421,9 +421,9 @@
             </div>
             
             <div class="team-member">
-                <img class="size-full wp-image-270" title="" src="charis.jpg" alt="" width="150" height="150" />
+                <img class="size-full wp-image-270" title="" src="charis.jpg" alt="" width="150" height="150" object-fit = "cover"/>
                 <div class="team-member-info">
-                    <strong>Charis Giannitsis</strong>
+                    <strong>Charilaos (Charis) Giannitsis</strong>
                     <p>Email: cg56 [at] rice.edu</p>
                 </div>
             </div>
